Alterei com conflito!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Martin Dala atualizado DevFest</h2>
+  <p style="color:rebeccapurple;">Conflitando</p>
 </body>
 </html>
